Add info complete styling for now

--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,12 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <!--    Font awesome kit -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
+
+    <title>Digital Business Card</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
